--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "n8n start"
+    "start": "n8n start",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
